--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -85,11 +85,15 @@ img {
 }
 .breadcrumb {
   gap: 1em;
-  color: $list-color;
-  li {
-    list-style: none;
+
+  a {
+    text-decoration: none;
     font-weight: 700;
     letter-spacing: 2px;
+    color: $list-color;
+  }
+  @media(max-width: 670px){
+    display: none;
   }
 }
 
@@ -171,6 +175,12 @@ img {
       font-weight: 500;
     }
   }
+  &__icon {
+    img {
+      min-width: 24px;
+      min-height: 24px;
+    }
+  }
 }
 
 // PROMOTION STYLE
@@ -189,6 +199,14 @@ img {
     justify-content: center;
     flex: 0 1 40%;
     gap: 3em;
+    @media (max-width: 670px) {
+      flex: 0 0 100%;
+      align-items: center;
+      text-align: center;
+    }
+    @media (max-width: 1000px) {
+      flex: 0 0 70%;
+    }
   }
   &_btn {
     max-width: 155px;
@@ -253,6 +271,18 @@ img {
   &__header {
     justify-content: space-between;
     margin-bottom: 5em;
+    img {
+      max-height: 40px;
+      max-width: 152px;
+    }
+    @media(max-width: 420px) {
+      flex-direction: column;
+      justify-content: center;
+      gap: 2em;
+      img {
+        margin: 0 auto;
+      }
+    }
   }
   &__content {
     flex-wrap: wrap;
@@ -324,6 +354,7 @@ img {
   flex-direction: column;
   align-items: center;
   margin-top: 3em;
+  text-align: center;
   gap: 2em;
   &__form {
     margin: 0 auto;
@@ -338,7 +369,6 @@ img {
   p {
     font-size: $main-font-size;
     color: black;
-    text-align: center;
   }
   form {
     flex-direction: column;
@@ -359,6 +389,10 @@ img {
     @media (max-width: 420px) {
       width: 100%;
     }
+  }
+  img {
+    max-width: 138px;
+    max-height: 138px;
   }
   .modal_btn {
     max-width: 120px;
