--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -333,7 +333,7 @@ img {
 
 .modal-content {
   background-color: white;
-  margin: 20% auto;
+  margin: 10% auto;
   padding: 0.5em 2em;
   max-width: 1318px;
   width: 70%;
@@ -402,4 +402,13 @@ img {
 }
 #success-container {
   display: none;
+}
+.password-input {
+  display: grid;
+}
+
+///// VAIDATION MEASSAGE STYLES
+.message {
+  color: red;
+  font-size: 0.5em;
 }
